--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+/* Top banner */
+#top-banner{
+    background-image: url(images/top-banner.png);
+    height: 100vh;
 }
