footer carousal banner added

--- a/main.css
+++ b/main.css
@@ -5,7 +5,24 @@
 }
 
 /* Top banner */
-#top-banner{
+#top-banner{    
     background-image: url(images/top-banner.png);
-    height: 100vh;
+    height: 100vh;    
+    z-index: 100;
+    
+}
+.banner-text{    
+    font-size: 90px;
+    margin-left: 25%;
+    margin-top: 15%;    
+    z-index: -1;      
+}
+/* Body banner */
+#body-banner{
+background-image: url(images/history-banner.png);
+height: 100vh;
+}
+/* change transition duration to control the speed of fade effect */
+.carousel-item {
+    transition: transform 3.6s ease-in-out;
 }
